<resources>
    <string name="app_name">RockClassicPop Music</string>
    <string name="frag_classic">Classic</string>
    <string name="frag_pop">Pop</string>
    <string name="frag_rock">Rock</string>

    <string name="uri_scheme_file"></string>
    <string name="uri_scheme_content"></string>
    <string name="uri_scheme_http">http</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classic_musics">Classic Musics</string>
    <string name="pop_musics">Pop Musics</string>
    <string name="rock_musics">Rock Musics</string>
    <string name="settings">Settings</string>
    <string name="music_artist">Artist Name</string>
    <string name="music_title">Music Title</string>
    <string name="music_image">Music Cover</string>
    <string name="music_price">100.00 USD</string>
</resources>