<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/music_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/music_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/music_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/music_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/music_photo"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="start"
            android:text="@string/music_title" />

        <TextView
            android:id="@+id/music_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/music_photo"
            android:layout_alignBottom="@id/music_title"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_medium"
            android:gravity="start"
            android:text="@string/music_title" />

        <TextView
            android:id="@+id/music_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/music_artist"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="@string/music_price" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>